@@ -311,7 +311,7 @@ ILboolean ilLoadJp2L(const void *Lump, ILuint Size);
 ILboolean ilLoadJp2LInternal(const void *Lump, ILuint Size, ILimage *Image);
 ILboolean ilSaveJp2(ILconst_string FileName);
 ILboolean ilSaveJp2F(ILHANDLE File);
-ILboolean ilSaveJp2L(const void *Lump, ILuint Size);
+ILboolean ilSaveJp2L(void *Lump, ILuint Size);
 ILboolean ilIsValidJpeg(ILconst_string FileName);
 ILboolean ilIsValidJpegF(ILHANDLE File);
 ILboolean ilIsValidJpegL(const void *Lump, ILuint Size);
@@ -446,7 +446,7 @@ ILboolean ilLoadWbmpF(ILHANDLE File);
 ILboolean ilLoadWbmpL(const void *Lump, ILuint Size);
 ILboolean ilSaveWbmp(ILconst_string FileName);
 ILboolean ilSaveWbmpF(ILHANDLE File);
-ILboolean ilSaveWbmpL(const void *Lump, ILuint Size);
+ILboolean ilSaveWbmpL(void *Lump, ILuint Size);
 ILboolean ilLoadWdp(ILconst_string FileName);
 ILboolean ilLoadWdpF(ILHANDLE File);
 ILboolean ilLoadWdpL(const void *Lump, ILuint Size);
