@@ -426,7 +426,7 @@ ILboolean iLoadIconPNG(ICOIMAGE *Icon)
 static void ico_png_read(png_structp png_ptr, png_bytep data, png_size_t length)
 {
 	(void)png_ptr;
-	iread(data, 1, length);
+	iread(data, 1, (ILuint)length);
 	return;
 }
 
